[package]
name = "klee-bindings"
version = "0.1.0"
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2018"
description = "Raw bindings to the KLEE library using bindgen"
categories = ["no-std", "external-ffi-bindings"]
keywords = ["klee", "symbolic", "execution", "verification", "test"]
readme = "README.md"
repository = "https://github.com/markhakansson/klee-bindings"
license = "MIT"

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = "0.57.0"
